tp7/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On DEF shift to state 1
-- On prog shift to state 62
-- On list(def) shift to state 63
-- On def shift to state 66
-- On TURNRIGHT reduce production list(def) -> 
-- On TURNLEFT reduce production list(def) -> 
-- On REPEAT reduce production list(def) -> 
-- On PENUP reduce production list(def) -> 
-- On PENDOWN reduce production list(def) -> 
-- On LACC reduce production list(def) -> 
-- On IF reduce production list(def) -> 
-- On IDENT reduce production list(def) -> 
-- On FORWARD reduce production list(def) -> 
-- On EOF reduce production list(def) -> 
-- On COLOR reduce production list(def) -> 

State 1:
def -> DEF . IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR stmt [ TURNRIGHT TURNLEFT REPEAT PENUP PENDOWN LACC IF IDENT FORWARD EOF DEF COLOR ]
-- On IDENT shift to state 2

State 2:
def -> DEF IDENT . LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR stmt [ TURNRIGHT TURNLEFT REPEAT PENUP PENDOWN LACC IF IDENT FORWARD EOF DEF COLOR ]
-- On LPAR shift to state 3

State 3:
def -> DEF IDENT LPAR . loption(separated_nonempty_list(COMMA,IDENT)) RPAR stmt [ TURNRIGHT TURNLEFT REPEAT PENUP PENDOWN LACC IF IDENT FORWARD EOF DEF COLOR ]
-- On IDENT shift to state 4
-- On separated_nonempty_list(COMMA,IDENT) shift to state 7
-- On loption(separated_nonempty_list(COMMA,IDENT)) shift to state 8
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> 

State 4:
separated_nonempty_list(COMMA,IDENT) -> IDENT . [ RPAR ]
separated_nonempty_list(COMMA,IDENT) -> IDENT . COMMA separated_nonempty_list(COMMA,IDENT) [ RPAR ]
-- On COMMA shift to state 5
-- On RPAR reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT 

State 5:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA . separated_nonempty_list(COMMA,IDENT) [ RPAR ]
-- On IDENT shift to state 4
-- On separated_nonempty_list(COMMA,IDENT) shift to state 6

State 6:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) . [ RPAR ]
-- On RPAR reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) 

State 7:
loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) . [ RPAR ]
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) 

State 8:
def -> DEF IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) . RPAR stmt [ TURNRIGHT TURNLEFT REPEAT PENUP PENDOWN LACC IF IDENT FORWARD EOF DEF COLOR ]
-- On RPAR shift to state 9

State 9:
def -> DEF IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR . stmt [ TURNRIGHT TURNLEFT REPEAT PENUP PENDOWN LACC IF IDENT FORWARD EOF DEF COLOR ]
-- On TURNRIGHT shift to state 10
-- On TURNLEFT shift to state 27
-- On REPEAT shift to state 29
-- On PENUP shift to state 31
-- On PENDOWN shift to state 32
-- On LACC shift to state 33
-- On IF shift to state 34
-- On IDENT shift to state 36
-- On FORWARD shift to state 44
-- On COLOR shift to state 46
-- On stmt shift to state 61

State 10:
stmt -> TURNRIGHT . expr [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 26

State 11:
expr -> SUB . expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 25

State 12:
expr -> LPAR . expr RPAR [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 15

State 13:
expr -> INT . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On TURNRIGHT reduce production expr -> INT 
-- On TURNLEFT reduce production expr -> INT 
-- On SUB reduce production expr -> INT 
-- On RPAR reduce production expr -> INT 
-- On REPEAT reduce production expr -> INT 
-- On RACC reduce production expr -> INT 
-- On PENUP reduce production expr -> INT 
-- On PENDOWN reduce production expr -> INT 
-- On MUL reduce production expr -> INT 
-- On LACC reduce production expr -> INT 
-- On IF reduce production expr -> INT 
-- On IDENT reduce production expr -> INT 
-- On FORWARD reduce production expr -> INT 
-- On EOF reduce production expr -> INT 
-- On ELSE reduce production expr -> INT 
-- On DIV reduce production expr -> INT 
-- On DEF reduce production expr -> INT 
-- On COMMA reduce production expr -> INT 
-- On COLOR reduce production expr -> INT 
-- On ADD reduce production expr -> INT 

State 14:
expr -> IDENT . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On TURNRIGHT reduce production expr -> IDENT 
-- On TURNLEFT reduce production expr -> IDENT 
-- On SUB reduce production expr -> IDENT 
-- On RPAR reduce production expr -> IDENT 
-- On REPEAT reduce production expr -> IDENT 
-- On RACC reduce production expr -> IDENT 
-- On PENUP reduce production expr -> IDENT 
-- On PENDOWN reduce production expr -> IDENT 
-- On MUL reduce production expr -> IDENT 
-- On LACC reduce production expr -> IDENT 
-- On IF reduce production expr -> IDENT 
-- On IDENT reduce production expr -> IDENT 
-- On FORWARD reduce production expr -> IDENT 
-- On EOF reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On DEF reduce production expr -> IDENT 
-- On COMMA reduce production expr -> IDENT 
-- On COLOR reduce production expr -> IDENT 
-- On ADD reduce production expr -> IDENT 

State 15:
expr -> expr . ADD expr [ SUB RPAR MUL DIV ADD ]
expr -> expr . SUB expr [ SUB RPAR MUL DIV ADD ]
expr -> expr . MUL expr [ SUB RPAR MUL DIV ADD ]
expr -> expr . DIV expr [ SUB RPAR MUL DIV ADD ]
expr -> LPAR expr . RPAR [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 16
-- On RPAR shift to state 22
-- On MUL shift to state 18
-- On DIV shift to state 20
-- On ADD shift to state 23

State 16:
expr -> expr SUB . expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 17

State 17:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr SUB expr . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On MUL shift to state 18
-- On DIV shift to state 20
-- On TURNRIGHT reduce production expr -> expr SUB expr 
-- On TURNLEFT reduce production expr -> expr SUB expr 
-- On SUB reduce production expr -> expr SUB expr 
-- On RPAR reduce production expr -> expr SUB expr 
-- On REPEAT reduce production expr -> expr SUB expr 
-- On RACC reduce production expr -> expr SUB expr 
-- On PENUP reduce production expr -> expr SUB expr 
-- On PENDOWN reduce production expr -> expr SUB expr 
-- On LACC reduce production expr -> expr SUB expr 
-- On IF reduce production expr -> expr SUB expr 
-- On IDENT reduce production expr -> expr SUB expr 
-- On FORWARD reduce production expr -> expr SUB expr 
-- On EOF reduce production expr -> expr SUB expr 
-- On ELSE reduce production expr -> expr SUB expr 
-- On DEF reduce production expr -> expr SUB expr 
-- On COMMA reduce production expr -> expr SUB expr 
-- On COLOR reduce production expr -> expr SUB expr 
-- On ADD reduce production expr -> expr SUB expr 

State 18:
expr -> expr MUL . expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 19

State 19:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr MUL expr . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On TURNRIGHT reduce production expr -> expr MUL expr 
-- On TURNLEFT reduce production expr -> expr MUL expr 
-- On SUB reduce production expr -> expr MUL expr 
-- On RPAR reduce production expr -> expr MUL expr 
-- On REPEAT reduce production expr -> expr MUL expr 
-- On RACC reduce production expr -> expr MUL expr 
-- On PENUP reduce production expr -> expr MUL expr 
-- On PENDOWN reduce production expr -> expr MUL expr 
-- On MUL reduce production expr -> expr MUL expr 
-- On LACC reduce production expr -> expr MUL expr 
-- On IF reduce production expr -> expr MUL expr 
-- On IDENT reduce production expr -> expr MUL expr 
-- On FORWARD reduce production expr -> expr MUL expr 
-- On EOF reduce production expr -> expr MUL expr 
-- On ELSE reduce production expr -> expr MUL expr 
-- On DIV reduce production expr -> expr MUL expr 
-- On DEF reduce production expr -> expr MUL expr 
-- On COMMA reduce production expr -> expr MUL expr 
-- On COLOR reduce production expr -> expr MUL expr 
-- On ADD reduce production expr -> expr MUL expr 

State 20:
expr -> expr DIV . expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 21

State 21:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr DIV expr . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On TURNRIGHT reduce production expr -> expr DIV expr 
-- On TURNLEFT reduce production expr -> expr DIV expr 
-- On SUB reduce production expr -> expr DIV expr 
-- On RPAR reduce production expr -> expr DIV expr 
-- On REPEAT reduce production expr -> expr DIV expr 
-- On RACC reduce production expr -> expr DIV expr 
-- On PENUP reduce production expr -> expr DIV expr 
-- On PENDOWN reduce production expr -> expr DIV expr 
-- On MUL reduce production expr -> expr DIV expr 
-- On LACC reduce production expr -> expr DIV expr 
-- On IF reduce production expr -> expr DIV expr 
-- On IDENT reduce production expr -> expr DIV expr 
-- On FORWARD reduce production expr -> expr DIV expr 
-- On EOF reduce production expr -> expr DIV expr 
-- On ELSE reduce production expr -> expr DIV expr 
-- On DIV reduce production expr -> expr DIV expr 
-- On DEF reduce production expr -> expr DIV expr 
-- On COMMA reduce production expr -> expr DIV expr 
-- On COLOR reduce production expr -> expr DIV expr 
-- On ADD reduce production expr -> expr DIV expr 

State 22:
expr -> LPAR expr RPAR . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On TURNRIGHT reduce production expr -> LPAR expr RPAR 
-- On TURNLEFT reduce production expr -> LPAR expr RPAR 
-- On SUB reduce production expr -> LPAR expr RPAR 
-- On RPAR reduce production expr -> LPAR expr RPAR 
-- On REPEAT reduce production expr -> LPAR expr RPAR 
-- On RACC reduce production expr -> LPAR expr RPAR 
-- On PENUP reduce production expr -> LPAR expr RPAR 
-- On PENDOWN reduce production expr -> LPAR expr RPAR 
-- On MUL reduce production expr -> LPAR expr RPAR 
-- On LACC reduce production expr -> LPAR expr RPAR 
-- On IF reduce production expr -> LPAR expr RPAR 
-- On IDENT reduce production expr -> LPAR expr RPAR 
-- On FORWARD reduce production expr -> LPAR expr RPAR 
-- On EOF reduce production expr -> LPAR expr RPAR 
-- On ELSE reduce production expr -> LPAR expr RPAR 
-- On DIV reduce production expr -> LPAR expr RPAR 
-- On DEF reduce production expr -> LPAR expr RPAR 
-- On COMMA reduce production expr -> LPAR expr RPAR 
-- On COLOR reduce production expr -> LPAR expr RPAR 
-- On ADD reduce production expr -> LPAR expr RPAR 

State 23:
expr -> expr ADD . expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 24

State 24:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr ADD expr . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On MUL shift to state 18
-- On DIV shift to state 20
-- On TURNRIGHT reduce production expr -> expr ADD expr 
-- On TURNLEFT reduce production expr -> expr ADD expr 
-- On SUB reduce production expr -> expr ADD expr 
-- On RPAR reduce production expr -> expr ADD expr 
-- On REPEAT reduce production expr -> expr ADD expr 
-- On RACC reduce production expr -> expr ADD expr 
-- On PENUP reduce production expr -> expr ADD expr 
-- On PENDOWN reduce production expr -> expr ADD expr 
-- On LACC reduce production expr -> expr ADD expr 
-- On IF reduce production expr -> expr ADD expr 
-- On IDENT reduce production expr -> expr ADD expr 
-- On FORWARD reduce production expr -> expr ADD expr 
-- On EOF reduce production expr -> expr ADD expr 
-- On ELSE reduce production expr -> expr ADD expr 
-- On DEF reduce production expr -> expr ADD expr 
-- On COMMA reduce production expr -> expr ADD expr 
-- On COLOR reduce production expr -> expr ADD expr 
-- On ADD reduce production expr -> expr ADD expr 

State 25:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
expr -> SUB expr . [ TURNRIGHT TURNLEFT SUB RPAR REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COMMA COLOR ADD ]
-- On MUL shift to state 18
-- On DIV shift to state 20
-- On TURNRIGHT reduce production expr -> SUB expr 
-- On TURNLEFT reduce production expr -> SUB expr 
-- On SUB reduce production expr -> SUB expr 
-- On RPAR reduce production expr -> SUB expr 
-- On REPEAT reduce production expr -> SUB expr 
-- On RACC reduce production expr -> SUB expr 
-- On PENUP reduce production expr -> SUB expr 
-- On PENDOWN reduce production expr -> SUB expr 
-- On LACC reduce production expr -> SUB expr 
-- On IF reduce production expr -> SUB expr 
-- On IDENT reduce production expr -> SUB expr 
-- On FORWARD reduce production expr -> SUB expr 
-- On EOF reduce production expr -> SUB expr 
-- On ELSE reduce production expr -> SUB expr 
-- On DEF reduce production expr -> SUB expr 
-- On COMMA reduce production expr -> SUB expr 
-- On COLOR reduce production expr -> SUB expr 
-- On ADD reduce production expr -> SUB expr 

State 26:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
stmt -> TURNRIGHT expr . [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On SUB shift to state 16
-- On MUL shift to state 18
-- On DIV shift to state 20
-- On ADD shift to state 23
-- On TURNRIGHT reduce production stmt -> TURNRIGHT expr 
-- On TURNLEFT reduce production stmt -> TURNRIGHT expr 
-- On REPEAT reduce production stmt -> TURNRIGHT expr 
-- On RACC reduce production stmt -> TURNRIGHT expr 
-- On PENUP reduce production stmt -> TURNRIGHT expr 
-- On PENDOWN reduce production stmt -> TURNRIGHT expr 
-- On LACC reduce production stmt -> TURNRIGHT expr 
-- On IF reduce production stmt -> TURNRIGHT expr 
-- On IDENT reduce production stmt -> TURNRIGHT expr 
-- On FORWARD reduce production stmt -> TURNRIGHT expr 
-- On EOF reduce production stmt -> TURNRIGHT expr 
-- On ELSE reduce production stmt -> TURNRIGHT expr 
-- On DEF reduce production stmt -> TURNRIGHT expr 
-- On COLOR reduce production stmt -> TURNRIGHT expr 

State 27:
stmt -> TURNLEFT . expr [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 28

State 28:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB REPEAT RACC PENUP PENDOWN MUL LACC IF IDENT FORWARD EOF ELSE DIV DEF COLOR ADD ]
stmt -> TURNLEFT expr . [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On SUB shift to state 16
-- On MUL shift to state 18
-- On DIV shift to state 20
-- On ADD shift to state 23
-- On TURNRIGHT reduce production stmt -> TURNLEFT expr 
-- On TURNLEFT reduce production stmt -> TURNLEFT expr 
-- On REPEAT reduce production stmt -> TURNLEFT expr 
-- On RACC reduce production stmt -> TURNLEFT expr 
-- On PENUP reduce production stmt -> TURNLEFT expr 
-- On PENDOWN reduce production stmt -> TURNLEFT expr 
-- On LACC reduce production stmt -> TURNLEFT expr 
-- On IF reduce production stmt -> TURNLEFT expr 
-- On IDENT reduce production stmt -> TURNLEFT expr 
-- On FORWARD reduce production stmt -> TURNLEFT expr 
-- On EOF reduce production stmt -> TURNLEFT expr 
-- On ELSE reduce production stmt -> TURNLEFT expr 
-- On DEF reduce production stmt -> TURNLEFT expr 
-- On COLOR reduce production stmt -> TURNLEFT expr 

State 29:
stmt -> REPEAT . expr stmt [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 30

State 30:
expr -> expr . ADD expr [ TURNRIGHT TURNLEFT SUB REPEAT PENUP PENDOWN MUL LACC IF IDENT FORWARD DIV COLOR ADD ]
expr -> expr . SUB expr [ TURNRIGHT TURNLEFT SUB REPEAT PENUP PENDOWN MUL LACC IF IDENT FORWARD DIV COLOR ADD ]
expr -> expr . MUL expr [ TURNRIGHT TURNLEFT SUB REPEAT PENUP PENDOWN MUL LACC IF IDENT FORWARD DIV COLOR ADD ]
expr -> expr . DIV expr [ TURNRIGHT TURNLEFT SUB REPEAT PENUP PENDOWN MUL LACC IF IDENT FORWARD DIV COLOR ADD ]
stmt -> REPEAT expr . stmt [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On TURNRIGHT shift to state 10
-- On TURNLEFT shift to state 27
-- On SUB shift to state 16
-- On REPEAT shift to state 29
-- On PENUP shift to state 31
-- On PENDOWN shift to state 32
-- On MUL shift to state 18
-- On LACC shift to state 33
-- On IF shift to state 34
-- On IDENT shift to state 36
-- On FORWARD shift to state 44
-- On DIV shift to state 20
-- On COLOR shift to state 46
-- On ADD shift to state 23
-- On stmt shift to state 60

State 31:
stmt -> PENUP . [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On TURNRIGHT reduce production stmt -> PENUP 
-- On TURNLEFT reduce production stmt -> PENUP 
-- On REPEAT reduce production stmt -> PENUP 
-- On RACC reduce production stmt -> PENUP 
-- On PENUP reduce production stmt -> PENUP 
-- On PENDOWN reduce production stmt -> PENUP 
-- On LACC reduce production stmt -> PENUP 
-- On IF reduce production stmt -> PENUP 
-- On IDENT reduce production stmt -> PENUP 
-- On FORWARD reduce production stmt -> PENUP 
-- On EOF reduce production stmt -> PENUP 
-- On ELSE reduce production stmt -> PENUP 
-- On DEF reduce production stmt -> PENUP 
-- On COLOR reduce production stmt -> PENUP 

State 32:
stmt -> PENDOWN . [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On TURNRIGHT reduce production stmt -> PENDOWN 
-- On TURNLEFT reduce production stmt -> PENDOWN 
-- On REPEAT reduce production stmt -> PENDOWN 
-- On RACC reduce production stmt -> PENDOWN 
-- On PENUP reduce production stmt -> PENDOWN 
-- On PENDOWN reduce production stmt -> PENDOWN 
-- On LACC reduce production stmt -> PENDOWN 
-- On IF reduce production stmt -> PENDOWN 
-- On IDENT reduce production stmt -> PENDOWN 
-- On FORWARD reduce production stmt -> PENDOWN 
-- On EOF reduce production stmt -> PENDOWN 
-- On ELSE reduce production stmt -> PENDOWN 
-- On DEF reduce production stmt -> PENDOWN 
-- On COLOR reduce production stmt -> PENDOWN 

State 33:
stmt -> LACC . list(stmt) RACC [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On TURNRIGHT shift to state 10
-- On TURNLEFT shift to state 27
-- On REPEAT shift to state 29
-- On PENUP shift to state 31
-- On PENDOWN shift to state 32
-- On LACC shift to state 33
-- On IF shift to state 34
-- On IDENT shift to state 36
-- On FORWARD shift to state 44
-- On COLOR shift to state 46
-- On stmt shift to state 56
-- On list(stmt) shift to state 58
-- On RACC reduce production list(stmt) -> 

State 34:
stmt -> IF . expr stmt [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
stmt -> IF . expr stmt ELSE stmt [ TURNRIGHT TURNLEFT REPEAT RACC PENUP PENDOWN LACC IF IDENT FORWARD EOF ELSE DEF COLOR ]
-- On SUB shift to state 11
-- On LPAR shift to state 12
-- On INT shift to state 13
-- On IDENT shift to state 14
-- On expr shift to state 35
